<resources>
    <string name="app_name">Musical Structure App</string>
    <string name="my_favourite_songs">my_favourite_songs</string>
    <string name="love_songs">Love Songs</string>
    <string name="rock_songs">Rock Songs</string>
    <string name="i_will_always_love_yoy">I will always love yoy</string>
    <string name="artist_song_image">artist_song_image</string>
    <string name="whitney_huston">Whitney Huston</string>
    <string name="whitney_song">I will always love you</string>
    <string name="percy_sledge">Percy Sledge</string>
    <string name="percy_song">When a man loves a woman</string>
    <string name="savage_garden">Savage Garden</string>
    <string name="savage_garden_song">Truly Madly Deeply</string>
    <string name="ed_sheeran">Ed Sheeran</string>
    <string name="sheeran_song">Shape of you</string>
    <string name="ll_cool_j">LL Cool J</string>
    <string name="ll_cool_j_song">I need love</string>
    <string name="rihanna">Rihanna</string>
    <string name="rihanna_song">We found Love</string>
    <string name="john_legend">John Legend</string>
    <string name="john_legend_song">All of me</string>
    <string name="leona_lewis">Leona Lewis</string>
    <string name="leona_song">Bleeding Love</string>
    <string name="taylor_swift">Taylor Swift</string>
    <string name="taylor_swift_song">Love Story</string>
    <string name="lana_del_rey">Lana Del Rey</string>
    <string name="lana_song">Love</string>
    <string name="aerosmith">Aerosmith</string>
    <string name="aerosmith_song">Dream On</string>
    <string name="eagles">Eagles</string>
    <string name="eagles_song">Hotel California</string>
    <string name="the_beatles">The Beatles</string>
    <string name="the_beatles_song">Hey Jude</string>
    <string name="bon_jovi">Bon Jovi</string>
    <string name="bon_jovi_song">Livin\'On A Prayer</string>
    <string name="imagine_dragons">Imagine Dragons</string>
    <string name="imagine_dragons_song">Radioactive</string>
    <string name="metallica">Metallica</string>
    <string name="metallica_song">Enter Sandman</string>
    <string name="the_doors">The Doors</string>
    <string name="the_doors_song">Light My Fire</string>
    <string name="guns_n_roses">Guns N\'Roses</string>
    <string name="guns_n_roses_song">November Rain</string>
    <string name="pearl_jam">Pearl Jam</string>
    <string name="pearl_jam_song">Alive</string>
    <string name="pink_floyd">Pink Floyd</string>
    <string name="pink_floyd_song">Money</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
