<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="88dp"
    android:minHeight="@dimen/image_dimension"

    >

    <ImageView
        android:id="@+id/image"
        android:layout_width="@dimen/image_dimension"
        android:layout_height="@dimen/image_dimension"
        android:contentDescription="@string/artist_song_image" />

    <LinearLayout
        android:id="@+id/text_container"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:orientation="vertical"
        android:layout_toRightOf="@id/image"
        android:layout_toEndOf="@id/image"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="@dimen/paddings_linear_Layout"
        android:paddingStart="@dimen/paddings_linear_Layout"
        android:paddingTop="@dimen/paddings_linear_Layout">

        <TextView
            android:id="@+id/artist_text_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:text="@string/whitney_huston"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/song_text_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="top"
            android:text="@string/i_will_always_love_yoy"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </LinearLayout>

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_play_arrow"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="play_arrow" />

</RelativeLayout>